tests/parser/should_fail/let_assert_definition.csp
P = 
	let
		assert STOP [T= STOP
	within P
	